# pro-nlp-finalproject-nlp-09

./: .env_example  .gitignore  PIPELINE.md  README.md  app.py  env_template.txt  inference.py  pyproject.toml  readme.md  requirements.txt  run_pipeline.py  run_sentiment_analysis.py  streamlit.py  test_inference (1).py  train.py
WORKER_SERVER/: requirements.txt
app/: __init__.py  main.py
docs/: app_flow.md  formatting_linter.md  gcloud_manual.md  gcs_upload_manual.md  news_sentiment_model_flow.md  uv_usage.md
finance_agent/: .gitignore  app.py  requirements.txt
git/: prophet_features_5years_scale0.3.csv  (+2 more)
libs/: __init__.py  pyproject.toml
libs/gcp/: .env_example  __init__.py  base.py  bigquery.py  provider.py  query_params.py  storage.py
libs/gcp/repositories/: __init__.py  news_repository.py  price_repository.py
libs/gcp/sql/: __init__.py
libs/gcp/sql/market/: get_price_history.sql  get_prophet_features.sql
libs/gcp/sql/news/: get_article_texts.sql  get_articles.sql  get_articles_for_prediction.sql  get_articles_resources_features_corn.sql  get_articles_with_embeddings.sql  get_filtered_articles.sql  get_news_for_prediction.sql
libs/gcp/sql/prices/: get_prophet_features.sql  get_prophet_forecast_features.sql  get_timeseries_data.sql  merge_from_staging.sql  test_read_daily_prices.sql  truncate_staging.sql
libs/tests/: __init__.py  conftest.py  test_bigquery.py  test_config.py  test_connection.py  test_factory.py  test_sql_loader.py  test_storage.py  test_vertex_ai_helper.py
libs/utils/: __init__.py  config.py  constants.py  vertex_ai_helper.py
(+352 files in other folders)
