[project]
name = "libs"
version = "0.1.0"
description = "Common libraries: GCP service abstraction and utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # GCP dependencies
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-cloud-aiplatform",
    "db-dtypes",
    "pandas",
    # Utils dependencies
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
